5.2.2

2023-02-14  Sam Varshavchik  <mrsam@courier-mta.com>

	* imapd.c (append): No longer accept a non-standard single
	flag name instead of a parenthesized flag list to APPEND, due to
	ambiguity with the UTF8 extension.

5.2.1

2022-12-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* tcpd/libcouriertls.c (load_dh_params): OpenSSL 3 does not
	report an error when PEM_read_bio_Parameters_ex does not find
	any DH parameters, handle that.

	* Makefile: fix broken conversion from absolute to relative symlinks.
5.2.0

2022-11-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* Switch to libidn2.

	* Debian/Ubuntu: update lintian overrides

2022-11-23  Sam Varshavchik  <mrsam@courier-mta.com>

	* make install: replace absolute links with relative links.

5.1.9
	* Adjust deb packaging. Check /etc/lsb-release and include the
	distribution release in the deb package version, to faciliate
	updating to the same version of the package in an updated release.

	Fix build dependencies.

5.1.8

2022-05-22  Sam Varshavchik  <mrsam@courier-mta.com>

	* gcc 12 and autotools update. OpenSSL 3.0 update.

2022-04-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* courier, courier-imap: remove the --disable-root-check configure
	option, now that make check can deal with it.

2022-04-14  Sam Varshavchik  <mrsam@courier-mta.com>

	* Add scripts to create installable .deb packages, update
	documentation.

2022-03-03  Sam Varshavchik  <mrsam@courier-mta.com>

	* imap/authenticate_auth.c: Fix broken SASL authentication.

2022-01-23  Sam Varshavchik  <mrsam@courier-mta.com>

	* Adjust behavior of inherited ACLs. After deleting and recreating
	a folder, have the recreated folder inherit its parent folder's ACLs,
	normally, instead of mysteriously restoring whatever ACLs the folder
	had when it was deleted.

2022-01-22  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fixes to Makefile to workaround test suite failures related to
	permission checking when make check runs as root.
