@@ -1,3 +1,8 @@
+2023-02-19  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* all: update configure.ac to require at least version 2.0.5 of
+	libidn
+
 5.2.2
 
 2023-02-14  Sam Varshavchik  <mrsam@courier-mta.com>
